--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
                         MYSQL_ROOT_PASSWORD: 1234
                 ports:
                         - 3306:3306
+                volumes:
+                        - db-data:/var/lib/mysql
         apache:
                 container_name: my_apache
                 build:
@@ -18,6 +20,9 @@ services:
                         - db
                 ports:
                         - 80:80
+                volumes:
+                        - .:/var/www/html
+
         admin:
                 container_name: phpmyadmin
                 image: phpmyadmin
@@ -26,5 +31,7 @@ services:
                         - 8080:80
                 environment:
                         - PMA_ARBITRARY=1
+volumes:
+        db-data:
  
 
